added votes to takes for conditional rendering

--- a/Flask/hot_takes/templates/main.html
+++ b/Flask/hot_takes/templates/main.html
@@ -10,14 +10,26 @@
     <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}">
 </head>
 <body>
-    <h1>Welcome, {{session["user_name"]}}</h1>
+    <div class="w-100 p-2 d-flex justify-content-between align-items-center border-bottom border-5 border-dark">
+        <h1>Welcome, {{session["user_name"]}}</h1>
+        <a href="/logout" class="btn btn-danger">logout</a>
+    </div>
 
-    <ul>
         {% for take in takes %}
-            <li>{{take["take"]}}, posted by {{take["poster"]}}</li>
+            {% if take["votes"] < 100 %}
+                <div class="take hot">
+                    <h1>{{take["take"]}}</h1>
+                    <h2><em>posted by {{take["poster"]}}</em></h2>
+                    <h2>votes: {{take["votes"]}}</h2>
+                </div>
+            {% else %}
+                <div class="take cold">
+                    <h1>{{take["take"]}}</h1>
+                    <h2><em>posted by {{take["poster"]}}</em></h2>
+                    <h2>votes: {{take["votes"]}}</h2>
+                </div>
+            {% endif %}
         {% endfor %}
-    </ul>
 
-    <a href="/logout" class="btn btn-danger">logout</a>
 </body>
 </html>
